Test 10 with example pictures

--- a/Test_Results/Test10/Test10_replicate.ipynb
+++ b/Test_Results/Test10/Test10_replicate.ipynb
@@ -141,6 +141,34 @@
    "source": [
     "The two figures are supposed to present a spread of mean weights. The increase of alpha and beta by tenfold makes the model more susceptible to cooperativity (theta) and thus bias a greater LTP."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What we want to replicate"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Figure 3.9\n",
+    "![Alt text](Figure3.9.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Figure 3.10 \n",
+    "(Parameters are not identical, but the evaulated effect should be the same)\n",
+    "\n",
+    "![Alt text](Figure3.10.png)"
+   ]
   }
  ],
  "metadata": {
@@ -159,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
