File reader plus changes
Jupyter notebook to read the neuronPop recording outputs (and then you can do with them what you see fit)

--- a/Test_Results/AnalyseCode/hetero_analyser_mono_dendrite.ipynb
+++ b/Test_Results/AnalyseCode/hetero_analyser_mono_dendrite.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dir = os.getcwd()+\"\\\\\"\n",
+    "base_dir = os.getcwd()+os.sep\n",
     "\n",
     "data_str1=\"_HeteroSynapses.dat\"\n",
     "data_str2=\"_OverallHeteroSynapses.dat\"\n",
