Reader error corrected
'' literal is identified as non-convertible to int, and it results from an empty list

--- a/Test_Results/AnalyseCode/ParsedFileReader.ipynb
+++ b/Test_Results/AnalyseCode/ParsedFileReader.ipynb
@@ -117,7 +117,12 @@
     "            elif line.startswith('N'):\n",
     "                line=line.split('=')\n",
     "                n_index=int(line[0].split('_')[1])\n",
-    "                spiketimes=[int(i) for i in line[1].split(',')]\n",
+    "                spiketimes=list()\n",
+    "                for i in line[1].split(','):\n",
+    "                    if i=='':\n",
+    "                        continue\n",
+    "                    else:\n",
+    "                        spiketimes.append(i)\n",
     "                recording.append_spiketimes(n_index, spiketimes)\n",
     "            else:\n",
     "                print('Oversight error')\n",
