Finished InputNeuronPop class

--- a/Test_Results/AnalyseCode/ParsedFileReader.ipynb
+++ b/Test_Results/AnalyseCode/ParsedFileReader.ipynb
@@ -97,38 +97,48 @@
    ],
    "source": [
     "#Here we use split = to get the name and the values, then split the second with commas to get the spike-time list\n",
-    "all_recordingsST=OutputRecordingList()\n",
-    "for i, file in enumerate(neuronPop_files):\n",
-    "    with open(file) as file:\n",
-    "        firstline=file.readlines()[0].rstrip() #The first line should be the metadata\n",
-    "        if not firstline.startswith('M'):\n",
-    "            print('Error with metadata reading')\n",
-    "            raise Exception\n",
-    "        metadata_list=firstline.split('=')[1].split(',')\n",
-    "        metadata_list[0]=int(metadata_list[0])\n",
-    "        metadata_list[1]=float(metadata_list[1])\n",
-    "        metadata_list[2]=int(metadata_list[2])\n",
-    "        metadata_list[3]=int(metadata_list[3])\n",
-    "        recording=NeuronPopRecording(metadata_list[3])\n",
-    "        recording.append_metadata(metadata_list)\n",
-    "        for line in file.readlines():\n",
-    "            if line.startswith('M'):\n",
-    "                pass\n",
-    "            elif line.startswith('N'):\n",
-    "                line=line.split('=')\n",
-    "                n_index=int(line[0].split('_')[1])\n",
-    "                spiketimes=list()\n",
-    "                for i in line[1].split(','):\n",
-    "                    if i=='':\n",
-    "                        continue\n",
-    "                    else:\n",
-    "                        spiketimes.append(i)\n",
-    "                recording.append_spiketimes(n_index, spiketimes)\n",
-    "            else:\n",
-    "                print('Oversight error')\n",
+    "def read_all_output_files_into_object(neuronPop_files):\n",
+    "    all_recordingsST=OutputRecordingList()\n",
+    "    for i, file in enumerate(neuronPop_files):\n",
+    "        with open(file) as file:\n",
+    "            firstline=file.readlines()[0].rstrip() #The first line should be the metadata\n",
+    "            if not firstline.startswith('M'):\n",
+    "                print('Error with metadata reading')\n",
     "                raise Exception\n",
-    "    all_recordingsST.append(recording)\n",
-    "all_recordingsST.get()"
+    "            metadata_list=firstline.split('=')[1].split(',')\n",
+    "            metadata_list[0]=int(metadata_list[0])\n",
+    "            metadata_list[1]=float(metadata_list[1])\n",
+    "            metadata_list[2]=int(metadata_list[2])\n",
+    "            metadata_list[3]=int(metadata_list[3])\n",
+    "            recording=NeuronPopRecording(metadata_list[3])\n",
+    "            recording.append_metadata(metadata_list)\n",
+    "            for line in file.readlines():\n",
+    "                if line.startswith('M'):\n",
+    "                    pass\n",
+    "                elif line.startswith('N'):\n",
+    "                    line=line.split('=')\n",
+    "                    n_index=int(line[0].split('_')[1])\n",
+    "                    spiketimes=list()\n",
+    "                    for i in line[1].split(','):\n",
+    "                        if i=='':\n",
+    "                            continue\n",
+    "                        else:\n",
+    "                            spiketimes.append(i)\n",
+    "                    recording.append_spiketimes(n_index, spiketimes)\n",
+    "                else:\n",
+    "                    print('Oversight error')\n",
+    "                    raise Exception\n",
+    "        all_recordingsST.append(recording)\n",
+    "    return all_recordingsST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_recordings=read_all_output_files_into_object(neuronPop_files)"
    ]
   }
  ],
