--- a/Test_Results/Test11/Test11_DataAnalysis.ipynb
+++ b/Test_Results/Test11/Test11_DataAnalysis.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,71 +31,7 @@
     "        return self.__dict__\n",
     "    def append(self, var : NeuronPopRecording):\n",
     "        setattr(self, \"NeuronPop_%s\" % (var.neuronPop_id), var)\n",
-    "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### File reading"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['AnalyseData.Rmd',\n",
-       " 'hetero_analyser_mono_dendrite.ipynb',\n",
-       " 'LoadData.R',\n",
-       " 'ParsedFileReader.ipynb',\n",
-       " 'README.txt']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#File reading here (files are always iterated on alphabetical order)\n",
-    "parsedOutput_string='_ParsedOutput.dat'\n",
     "\n",
-    "base_dir = os.getcwd()\n",
-    "\n",
-    "neuronPop_files = [f for f in os.listdir(base_dir) if f.endswith(parsedOutput_string)]"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Reading parsed spike times file (Neuron output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'NeuronPop_0': [0, 2, 4]}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "#Here we use split = to get the name and the values, then split the second with commas to get the spike-time list\n",
     "def read_all_output_files_into_object(neuronPop_files):\n",
     "    all_recordingsST=OutputRecordingList()\n",
@@ -133,12 +69,64 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### File reading"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#File reading here (files are always iterated on alphabetical order)\n",
+    "parsedOutput_string='_ParsedOutput.dat'\n",
+    "\n",
+    "base_dir = os.getcwd()\n",
+    "\n",
+    "neuronPop_files = [f for f in os.listdir(base_dir) if f.endswith(parsedOutput_string)]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reading parsed spike times file (Neuron output)\n",
+    "Always remember: the non-parsed files cannot be deleted by the programme. If they are very big it is recommended to delete them manually"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_recordings=read_all_output_files_into_object(neuronPop_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'NeuronPop_0': <__main__.NeuronPopRecording at 0x29b75f01a60>,\n",
+       " 'NeuronPop_1': <__main__.NeuronPopRecording at 0x29b75f1d190>}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_recordings.__dict__"
    ]
   }
  ],
