Test 11 final commit

--- a/Test_Results/AnalyseCode/ParsedFileReader.ipynb
+++ b/Test_Results/AnalyseCode/ParsedFileReader.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import os"
    ]
@@ -25,13 +25,62 @@
     "        self.metadata=metadata_list\n",
     "    def append_spiketimes(self, N_index : int, spiketimes_list : list):\n",
     "        setattr(self, \"Neuron_%s\" % (N_index), spiketimes_list)\n",
+    "    def create_firing_matrix(self):\n",
+    "        self.F_matrix=np.zeros(shape=(self.metadata[2], self.metadata[0]))\n",
+    "        for neuron in dir(self):\n",
+    "            if neuron.startswith(\"Neuron\"):\n",
+    "                neuron_index=int(neuron.split('_')[1])\n",
+    "                spiketimes=self.__dict__[neuron]\n",
+    "                for st in spiketimes:\n",
+    "                    self.F_matrix[int(st/self.metadata[1])-1, neuron_index]=1\n",
+    "                \n",
     "\n",
     "class OutputRecordingList: #Compendium of all recordings\n",
+    " #   def __iter__(self):\n",
+    "#        for attr, value in self.__dict__.iteritems():\n",
+    "#            yield attr, value\n",
     "    def get(self):\n",
     "        return self.__dict__\n",
     "    def append(self, var : NeuronPopRecording):\n",
     "        setattr(self, \"NeuronPop_%s\" % (var.neuronPop_id), var)\n",
-    "\n"
+    "\n",
+    "#Here we use split = to get the name and the values, then split the second with commas to get the spike-time list\n",
+    "def read_all_output_files_into_object(neuronPop_files):\n",
+    "    all_recordingsST=OutputRecordingList()\n",
+    "    for i, file in enumerate(neuronPop_files):\n",
+    "        with open(file, \"r\") as file:\n",
+    "            lines=file.readlines()\n",
+    "            firstline=lines[0].rstrip() #The first line should be the metadata\n",
+    "            if not firstline.startswith('M'):\n",
+    "                print('Error with metadata reading')\n",
+    "                raise Exception\n",
+    "            metadata_list=firstline.split('=')[1].split(',')\n",
+    "            metadata_list[0]=int(metadata_list[0])\n",
+    "            metadata_list[1]=float(metadata_list[1])\n",
+    "            metadata_list[2]=int(metadata_list[2])\n",
+    "            metadata_list[3]=int(metadata_list[3])\n",
+    "            recording=NeuronPopRecording(metadata_list[3])\n",
+    "            recording.append_metadata(metadata_list)\n",
+    "            for line in lines:\n",
+    "                if line.startswith('M'):\n",
+    "                    continue\n",
+    "                elif line.startswith('N'):\n",
+    "                    line=line.split('=')\n",
+    "                    n_index=int(line[0].split('_')[1])\n",
+    "                    spiketimes=list()\n",
+    "                    for i in line[1].split(','):\n",
+    "                        if i=='':\n",
+    "                            continue\n",
+    "                        elif i=='\\n':\n",
+    "                            continue\n",
+    "                        else:\n",
+    "                            spiketimes.append(float(i))\n",
+    "                    recording.append_spiketimes(n_index, spiketimes)\n",
+    "                else:\n",
+    "                    print('Oversight error')\n",
+    "                    raise Exception\n",
+    "        all_recordingsST.append(recording)\n",
+    "    return all_recordingsST"
    ]
   },
   {
@@ -96,40 +145,11 @@
     }
    ],
    "source": [
-    "#Here we use split = to get the name and the values, then split the second with commas to get the spike-time list\n",
-    "def read_all_output_files_into_object(neuronPop_files):\n",
-    "    all_recordingsST=OutputRecordingList()\n",
-    "    for i, file in enumerate(neuronPop_files):\n",
-    "        with open(file) as file:\n",
-    "            firstline=file.readlines()[0].rstrip() #The first line should be the metadata\n",
-    "            if not firstline.startswith('M'):\n",
-    "                print('Error with metadata reading')\n",
-    "                raise Exception\n",
-    "            metadata_list=firstline.split('=')[1].split(',')\n",
-    "            metadata_list[0]=int(metadata_list[0])\n",
-    "            metadata_list[1]=float(metadata_list[1])\n",
-    "            metadata_list[2]=int(metadata_list[2])\n",
-    "            metadata_list[3]=int(metadata_list[3])\n",
-    "            recording=NeuronPopRecording(metadata_list[3])\n",
-    "            recording.append_metadata(metadata_list)\n",
-    "            for line in file.readlines():\n",
-    "                if line.startswith('M'):\n",
-    "                    pass\n",
-    "                elif line.startswith('N'):\n",
-    "                    line=line.split('=')\n",
-    "                    n_index=int(line[0].split('_')[1])\n",
-    "                    spiketimes=list()\n",
-    "                    for i in line[1].split(','):\n",
-    "                        if i=='':\n",
-    "                            continue\n",
-    "                        else:\n",
-    "                            spiketimes.append(i)\n",
-    "                    recording.append_spiketimes(n_index, spiketimes)\n",
-    "                else:\n",
-    "                    print('Oversight error')\n",
-    "                    raise Exception\n",
-    "        all_recordingsST.append(recording)\n",
-    "    return all_recordingsST"
+    "all_recordings=read_all_output_files_into_object(neuronPop_files)\n",
+    "for attr in all_recordings.__dict__:\n",
+    "    print(attr)\n",
+    "    all_recordings.__getattribute__(attr).__getattribute__(\"create_firing_matrix\").__call__()\n",
+    "    ##Up until here everything woks as expected"
    ]
   },
   {
@@ -137,9 +157,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "all_recordings=read_all_output_files_into_object(neuronPop_files)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
