Test 11 analysis and general purpose parser
Both in a ipynb, specially designed to deal with firing matrices

--- a/Test_Results/AnalyseCode/ParsedFileReader.ipynb
+++ b/Test_Results/AnalyseCode/ParsedFileReader.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import os"
+    "import os\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -18,7 +19,7 @@
    "outputs": [],
    "source": [
     "class NeuronPopRecording: #Suppose to be one file\n",
-    "    metadata_datanames=['noNeurons', 'dt', 'totalTimesteps', 'neuronPopId']\n",
+    "    metadata_datanames=['noNeurons', 'dt', 'totalTimesteps', 'neuronPopId', 'simTime']\n",
     "    def __init__(self, neuronPop_id : int):\n",
     "        self.neuronPop_id=neuronPop_id\n",
     "    def append_metadata(self, metadata_list : list):\n",
@@ -33,10 +34,9 @@
     "                spiketimes=self.__dict__[neuron]\n",
     "                for st in spiketimes:\n",
     "                    self.F_matrix[int(st/self.metadata[1])-1, neuron_index]=1\n",
-    "                \n",
     "\n",
     "class OutputRecordingList: #Compendium of all recordings\n",
-    " #   def __iter__(self):\n",
+    "#    def __iter__(self):\n",
     "#        for attr, value in self.__dict__.iteritems():\n",
     "#            yield attr, value\n",
     "    def get(self):\n",
@@ -45,37 +45,42 @@
     "        setattr(self, \"NeuronPop_%s\" % (var.neuronPop_id), var)\n",
     "\n",
     "#Here we use split = to get the name and the values, then split the second with commas to get the spike-time list\n",
-    "def read_all_output_files_into_object(neuronPop_files):\n",
+    "def read_reasterplot_file_into_object(neuronPop_files):\n",
     "    all_recordingsST=OutputRecordingList()\n",
     "    for i, file in enumerate(neuronPop_files):\n",
     "        with open(file, \"r\") as file:\n",
     "            lines=file.readlines()\n",
-    "            firstline=lines[0].rstrip() #The first line should be the metadata\n",
-    "            if not firstline.startswith('M'):\n",
-    "                print('Error with metadata reading')\n",
-    "                raise Exception\n",
-    "            metadata_list=firstline.split('=')[1].split(',')\n",
-    "            metadata_list[0]=int(metadata_list[0])\n",
-    "            metadata_list[1]=float(metadata_list[1])\n",
-    "            metadata_list[2]=int(metadata_list[2])\n",
-    "            metadata_list[3]=int(metadata_list[3])\n",
-    "            recording=NeuronPopRecording(metadata_list[3])\n",
-    "            recording.append_metadata(metadata_list)\n",
     "            for line in lines:\n",
     "                if line.startswith('M'):\n",
-    "                    continue\n",
+    "                    subline=line.split('=')\n",
+    "                    neuronpop_id=int(subline[0].split('_')[1])\n",
+    "                    metadata_list=subline[1].split(',')\n",
+    "\n",
+    "                    metadata_list[0]=int(metadata_list[0])\n",
+    "                    metadata_list[1]=float(metadata_list[1])\n",
+    "                    metadata_list[2]=int(metadata_list[2])\n",
+    "                    metadata_list[3]=int(metadata_list[3])\n",
+    "                    metadata_list[4]=float(metadata_list[4])\n",
+    "\n",
+    "                    recording=NeuronPopRecording(neuronpop_id)\n",
+    "                    recording.append_metadata(metadata_list)\n",
+    "                    all_recordingsST.append(recording)\n",
+    "\n",
     "                elif line.startswith('N'):\n",
-    "                    line=line.split('=')\n",
-    "                    n_index=int(line[0].split('_')[1])\n",
+    "                    subline=line.split('=')\n",
+    "                    idline=subline[0].split('_')\n",
+    "                    neuronpop_id=int(idline[1])\n",
+    "                    neuron_id=int(idline[2])\n",
+    "\n",
     "                    spiketimes=list()\n",
-    "                    for i in line[1].split(','):\n",
+    "                    for i in subline[1].split(','):\n",
     "                        if i=='':\n",
     "                            continue\n",
     "                        elif i=='\\n':\n",
     "                            continue\n",
     "                        else:\n",
     "                            spiketimes.append(float(i))\n",
-    "                    recording.append_spiketimes(n_index, spiketimes)\n",
+    "                    all_recordingsST.__getattribute__(list(all_recordingsST.__dict__.keys())[neuronpop_id]).__getattribute__(\"append_spiketimes\").__call__(neuron_id, spiketimes)\n",
     "                else:\n",
     "                    print('Oversight error')\n",
     "                    raise Exception\n",
@@ -88,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### File reading"
+    "### Parsed spike times file reading"
    ]
   },
   {
@@ -125,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reading parsed spike times file (Neuron output)"
+    "### Reading parsed spike times file (Neuron output) and creating firing matrix"
    ]
   },
   {
@@ -145,7 +150,7 @@
     }
    ],
    "source": [
-    "all_recordings=read_all_output_files_into_object(neuronPop_files)\n",
+    "all_recordings=read_reasterplot_file_into_object(neuronPop_files)\n",
     "for attr in all_recordings.__dict__:\n",
     "    print(attr)\n",
     "    all_recordings.__getattribute__(attr).__getattribute__(\"create_firing_matrix\").__call__()\n",
@@ -153,11 +158,46 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rasterplot parsing code to spike times\n",
+    "(They will be lacking non-firing neurons, and there is no metadata)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#File reading here (files are always iterated on alphabetical order)\n",
+    "rasterplot_string='Rasterplot.dat'\n",
+    "\n",
+    "base_dir = os.getcwd()\n",
+    "\n",
+    "rasterplot_files = [f for f in os.listdir(base_dir) if f.endswith(rasterplot_string)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rasterdata=pd.read_table(rasterplot_files[0], comment='#')\n",
+    "neuronPopIds=set(rasterdata['Pop_id'])\n",
+    "neuronIds=set(rasterdata['Neuron_id'])\n",
+    "all_recordings2=OutputRecordingList()\n",
+    "for i in neuronPopIds:\n",
+    "    all_recordings2.append(NeuronPopRecording(i))\n",
+    "    for j in neuronIds:\n",
+    "        spiketimes = rasterdata[rasterdata['Neuron_id']==j]\n",
+    "        spiketimes= spiketimes[spiketimes['Pop_id']==i]\n",
+    "        spiketimes = list(spiketimes[\"Spike_t\"])\n",
+    "        all_recordings2.__getattribute__(list(all_recordings2.__dict__.keys())[i]).__getattribute__(\"append_spiketimes\").__call__(j, spiketimes)\n"
+   ]
   }
  ],
  "metadata": {
