Optimizations and documenting comments
Plus one bugfix

--- a/Input/DictatNeuronPopGenerator.ipynb
+++ b/Input/DictatNeuronPopGenerator.ipynb
@@ -11,6 +11,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Base parameters and arrays"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -35,6 +43,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Array functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -46,9 +62,17 @@
     "    neuron_offsets[neuron_id]=rd.uniform(0.0, 0.1)\n",
     "    random_max_frequencies[neuron_id]=rd.uniform(0.0, max_frequency)\n",
     "\n",
-    "def set_up_arrays(max_frequency:float):\n",
+    "def set_up_arrays_random_max_frequency(max_frequency:float):\n",
     "    for i in range (0,N_neurons):\n",
     "        _generate_random_arrays(i, max_frequency)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Instruction generation"
    ]
   },
   {
@@ -77,6 +101,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write instructions functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -91,12 +123,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run Cod"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "set_up_arrays(100)\n",
+    "set_up_arrays_random_max_frequency(100)\n",
     "zero_to_max_alterate_step_instructions()\n",
     "generate_instructions_from_arrays(neuron_ids, instruction_start_times, instruction_end_times, frequencies)"
    ]
