--- a/Input/DictatNeuronPopGenerator.ipynb
+++ b/Input/DictatNeuronPopGenerator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,8 @@
     "pop_id='0'\n",
     "filename=testname+'_DictatNeuronPop_'+pop_id+'_spikers.txt'\n",
     "N_neurons=100\n",
-    "total_time=100.0 #In seconds\n",
-    "instruction_number=10 #No need for offset instruction\n",
-    "total_time_intervals=10\n",
+    "total_time=50.0 #In seconds\n",
+    "total_time_intervals=4\n",
     "interval_duration=total_time/total_time_intervals\n",
     "\n",
     "random_max_frequencies=np.zeros(N_neurons)\n",
@@ -52,15 +51,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def _generate_random_arrays(neuron_id:int, max_frequency):\n",
     "    ###This actually generates a time interval that determines the phase\n",
     "    rd.seed(neuron_id)\n",
-    "    neuron_offsets[neuron_id]=rd.uniform(0.0, 0.1)\n",
-    "    random_max_frequencies[neuron_id]=rd.uniform(0.0, max_frequency)\n",
+    "    neuron_offsets[neuron_id]=rd.uniform(0.0, 0.05)\n",
+    "    random_max_frequencies[neuron_id]=rd.uniform(max_frequency/2, max_frequency)\n",
     "\n",
     "def set_up_arrays_random_max_frequency(max_frequency:float):\n",
     "    for i in range (0,N_neurons):\n",
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "2022.10.-1"
   },
   "orig_nbformat": 4
  },
